force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Maximum_number_of_Acres__c.field-meta.xml
<CustomField>
    <fullName>AVO_Maximum_number_of_Acres__c</fullName>
    <inlineHelpText>Maximum number of acres to be irrigated from this system</inlineHelpText>
    <label>Maximum number of Acres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>