force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Maximum_Pumping_Capacity__c.field-meta.xml
<CustomField>
    <fullName>AVO_Maximum_Pumping_Capacity__c</fullName>
    <inlineHelpText>gal/Min</inlineHelpText>
    <label>Maximum Pumping Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>