force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Meter__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meter</label>
    <referenceTo>AVO_Meter__c</referenceTo>
    <relationshipLabel>Permits</relationshipLabel>
    <relationshipName>Permits</relationshipName>
    <type>Lookup</type>
</CustomField>