force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Meter_Source_Y__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Source_Y__c</fullName>
    <label>Meter Source Y</label>
    <length>255</length>
    <type>Text</type>
</CustomField>