force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>AVO_Mobile_Phone__c</fullName>
    <label>Mobile Phone</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>