force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Modification_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Modification_Type__c</fullName>
    <label>Modification Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add GW Withdrawal(s)</fullName>
            </value>
            <value>
                <fullName>Add Replacement GW Withdrawal(s)</fullName>
            </value>
            <value>
                <fullName>Add SW Withdrawal(s)</fullName>
            </value>
            <value>
                <fullName>Decrease Acres</fullName>
            </value>
            <value>
                <fullName>Decrease GPMS</fullName>
            </value>
            <value>
                <fullName>Increase Acres</fullName>
            </value>
            <value>
                <fullName>Increase GPMs</fullName>
            </value>
            <value>
                <fullName>Remove SW Withdrawal(s)</fullName>
            </value>
            <value>
                <fullName>Revoked In Error by EPD</fullName>
            </value>
            <value>
                <fullName>Update Contact Information</fullName>
            </value>
            <value>
                <fullName>Update Other Information</fullName>
            </value>
            <value>
                <fullName>Add Low Flow Protection</fullName>
            </value>
            <value>
                <fullName>Remove GW Withdrawal(s)</fullName>
            </value>
            <value>
                <fullName>Add Low Flow Protection &amp; Add SW Withdrawal(s)</fullName>
                <isActive>false</isActive>
                <label>AddLow Flow Protection&amp;Add SWWithdrawals</label>
            </value>
            <value>
                <fullName>Decrease GPMS &amp; Acres</fullName>
                <isActive>false</isActive>
                <label>Decrease GPMS &amp; Acres</label>
            </value>
            <value>
                <fullName>Increase Acres &amp; Add GW Withdrawal(s)</fullName>
                <isActive>false</isActive>
                <label>Increase Acres &amp; Add GW Withdrawal(s)</label>
            </value>
            <value>
                <fullName>Increase Acres &amp; Add Low Flow Protection</fullName>
                <isActive>false</isActive>
                <label>Increase Acres &amp; Add Low Flow Protection</label>
            </value>
            <value>
                <fullName>Increase Acres &amp; Add SW Withdrawal(s)</fullName>
                <isActive>false</isActive>
                <label>Increase Acres &amp; Add SW Withdrawal(s)</label>
            </value>
            <value>
                <fullName>Increase Acres &amp; GPMs</fullName>
                <isActive>false</isActive>
                <label>Increase Acres &amp; GPMs</label>
            </value>
            <value>
                <fullName>Increase Acres &amp; GPMs &amp; Add SW withdrawal</fullName>
                <isActive>false</isActive>
                <label>Increase Acres&amp;GPMs &amp; Add SW withdrawal</label>
            </value>
            <value>
                <fullName>Increase Acres, GPMs &amp; Add GW Withdrawal(s)</fullName>
                <isActive>false</isActive>
                <label>Increase Acres,GPMs &amp; Add GW Withdrawals</label>
            </value>
            <value>
                <fullName>Increase Acres / Add GW &amp; SW Withdrawal(s)</fullName>
                <isActive>false</isActive>
                <label>Increase Acres/Add GW &amp; SW Withdrawals</label>
            </value>
            <value>
                <fullName>Increase GPMs &amp; Add GW Withdrawal(s)</fullName>
                <isActive>false</isActive>
                <label>Increase GPMs &amp; Add GW Withdrawal(s)</label>
            </value>
            <value>
                <fullName>Increase GPMs &amp; Add Low Flow Protection</fullName>
                <isActive>false</isActive>
                <label>Increase GPMs &amp; Add Low Flow Protection</label>
            </value>
            <value>
                <fullName>Increase GPMs &amp; Add SW withdrawal(s)</fullName>
                <isActive>false</isActive>
                <label>Increase GPMs &amp; Add SW withdrawal(s)</label>
            </value>
            <value>
                <fullName>Increase Acres &amp; GPMs / Add Low Flow Protection</fullName>
                <isActive>false</isActive>
                <label>IncreaseAcres&amp;GPMs/AddLowFlowProtection</label>
            </value>
            <value>
                <fullName>RGW</fullName>
                <isActive>false</isActive>
                <label>RGW</label>
            </value>
            <value>
                <fullName>RIE</fullName>
                <isActive>false</isActive>
                <label>RIE</label>
            </value>
            <value>
                <fullName>RPW</fullName>
                <isActive>false</isActive>
                <label>RPW</label>
            </value>
            <value>
                <fullName>UDD</fullName>
                <isActive>false</isActive>
                <label>UDD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>