force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_MOSID__c.field-meta.xml
<CustomField>
    <fullName>AVO_MOSID__c</fullName>
    <label>MOSID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>