force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_MOSID_col__c.field-meta.xml
<CustomField>
    <fullName>AVO_MOSID_col__c</fullName>
    <label>MOSID_col</label>
    <length>16</length>
    <type>Text</type>
</CustomField>