force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Motor_Speed_RPM__c.field-meta.xml
<CustomField>
    <fullName>avo_Motor_Speed_RPM__c</fullName>
    <label>Motor Speed (RPM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>