force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Permits (Name)</relationshipLabel>
    <relationshipName>Permits4</relationshipName>
    <type>Lookup</type>
</CustomField>