force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Name_of_Field__c.field-meta.xml
<CustomField>
    <fullName>AVO_Name_of_Field__c</fullName>
    <label>Name of Field</label>
    <length>13</length>
    <type>Text</type>
</CustomField>