force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Name_of_Irrigated_Field__c.field-meta.xml
<CustomField>
    <fullName>AVO_Name_of_Irrigated_Field__c</fullName>
    <label>Name of Irrigated Field</label>
    <length>23</length>
    <type>Text</type>
</CustomField>