force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_New_Permit_Format__c.field-meta.xml
<CustomField>
    <fullName>AVO_New_Permit_Format__c</fullName>
    <label>New Permit Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>