force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Night_time_only_irrigation__c.field-meta.xml
<CustomField>
    <fullName>AVO_Night_time_only_irrigation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Night-time only irrigation</label>
    <type>Checkbox</type>
</CustomField>