force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Number_of_Minutes_to_Recover__c.field-meta.xml
<CustomField>
    <fullName>avo_Number_of_Minutes_to_Recover__c</fullName>
    <inlineHelpText>min.</inlineHelpText>
    <label>Number of Minutes to Recover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>