force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_OnStream__c.field-meta.xml
<CustomField>
    <fullName>AVO_OnStream__c</fullName>
    <label>SW On Stream?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>