force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Operational_pump_shutdown_dev_one__c.field-meta.xml
<CustomField>
    <fullName>AVO_Operational_pump_shutdown_dev_one__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Operational pump shutdown safety device for Irrigation Efficiency - Section 1.</description>
    <inlineHelpText>Operational pump shutdown safety, or any other device, valve, or mechanism to interrupt the flow of water in the event of irrigation system failure.</inlineHelpText>
    <label>Operational pump shutdown safety device</label>
    <type>Checkbox</type>
</CustomField>