force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Operational_pump_shutdown_safety__c.field-meta.xml
<CustomField>
    <fullName>AVO_Operational_pump_shutdown_safety__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Operational pump shutdown safety to prevent pump operation in the event of irrigation system   shutdown *Required for Flint River Basin Area Restricted and Capacity Use Areas. (Refer to “Map A” on page 11)</inlineHelpText>
    <label>Operational pump shutdown safety</label>
    <type>Checkbox</type>
</CustomField>