force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Operational_rain_shut_off_switch__c.field-meta.xml
<CustomField>
    <fullName>AVO_Operational_rain_shut_off_switch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Operational rain shut-off switch to automatically shutoff irrigation if predetermined rainfall amount is received (For traveler, solid set, or drip irrigation systems only) *Required for Flint River Basin Area Restricted and Capacity Use Areas.</inlineHelpText>
    <label>Operational rain shut-off switch</label>
    <type>Checkbox</type>
</CustomField>