force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Operator_Manager__c.field-meta.xml
<CustomField>
    <fullName>AVO_Operator_Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Operator/Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Permits (Operator/Manager)</relationshipLabel>
    <relationshipName>Permits2</relationshipName>
    <type>Lookup</type>
</CustomField>