force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Original_Date_Applied__c.field-meta.xml
<CustomField>
    <fullName>AVO_Original_Date_Applied__c</fullName>
    <label>Original Date Applied</label>
    <type>Date</type>
</CustomField>