force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Other_Irrigation_System__c.field-meta.xml
<CustomField>
    <fullName>AVO_Other_Irrigation_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other</label>
    <type>Checkbox</type>
</CustomField>