force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Other_Irrigation_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Other_Irrigation_Type__c</fullName>
    <label>Other Irrigation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>