force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Outlet_Size__c.field-meta.xml
<CustomField>
    <fullName>avo_Outlet_Size__c</fullName>
    <inlineHelpText>(in.)</inlineHelpText>
    <label>Outlet Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>