force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Owner__c.field-meta.xml
<CustomField>
    <fullName>AVO_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Permits (Owner)</relationshipLabel>
    <relationshipName>Permits</relationshipName>
    <type>Lookup</type>
</CustomField>