force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Permit_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Batch_Id__c</fullName>
    <label>Permit Batch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>