force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Permit_Check_10__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Check_10__c</fullName>
    <formula>AND(
OR( NOT(BEGINS(LOWER(AVO_AppID__c), &quot;U&quot;)),  NOT(AVO_Undocumented__c)  ),
AND( NOT(CONTAINS(LOWER( AVO_FRBPCONZONE__c ), &quot;n&quot;)), NOT(CONTAINS(LOWER( AVO_FRBPCONZONE__c ), &quot;no&quot;)) ),
OR(  AVO_GW_Withdrawal_Applied_Date__c &gt; DATE(2006,4,20),  AVO_SW_Withdrawal_Applied_Date__c &gt; DATE(2006,4,20),  AVO_Original_Date_Applied__c &gt; DATE(2006,4,20),  AVO_DateRevRequested__c &gt; DATE(2006,4,20) ),
OR( ISPICKVAL(AVO_Transaction_Type__c, &quot;New Permit&quot;), ISPICKVAL(AVO_Transaction_Type__c, &quot;Application&quot;), ISPICKVAL(AVO_Transaction_Type__c, &quot;Modify &amp; Transfer Permit&quot;), ISPICKVAL(AVO_Transaction_Type__c, &quot;Modify Permit&quot;), ISPICKVAL(AVO_Transaction_Type__c, &quot;Consolidate Permit&quot;) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Permit Check 10</label>
    <type>Checkbox</type>
</CustomField>