force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Permit_Closed_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Closed_Status__c</fullName>
    <label>Permit Closed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled Must Reapply</fullName>
            </value>
            <value>
                <fullName>Relinquished</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Cancelled Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>