force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Permit_Holder_Address__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Holder_Address__c</fullName>
    <label>Permit Holder Address</label>
    <type>Address</type>
</CustomField>