force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Permit_Last_Revised_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Last_Revised_Date__c</fullName>
    <label>Permit Last Revised Date</label>
    <type>Date</type>
</CustomField>