force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Do you currently have an AG Water Permit With EPD? If Yes list one Permit #</inlineHelpText>
    <label>Permit Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MUSW__Permit2__c.MUSW__Type__c</field>
            <operation>notEqual</operation>
            <value>Revision</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Permits (Permit Number)</relationshipLabel>
    <relationshipName>Permits4</relationshipName>
    <type>Lookup</type>
</CustomField>