force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Permit_Number_Exisiting_Water_Pump__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Number_Exisiting_Water_Pump__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>If Yes, please provide the permit number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MUSW__Permit2__c.MUSW__Type__c</field>
            <operation>contains</operation>
            <value>Revision</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Permits (If Yes, please provide the permit number)</relationshipLabel>
    <relationshipName>Permits9</relationshipName>
    <type>Lookup</type>
</CustomField>