force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Permit_Number_to_Modify_or_Transfer__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Number_to_Modify_or_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit Number to Modify or Transfer</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Revisions</relationshipLabel>
    <relationshipName>Permits1</relationshipName>
    <type>Lookup</type>
</CustomField>