force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Permit_of_Plugged_Abandoned_Well__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_of_Plugged_Abandoned_Well__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If Application Type is to REPLACE an existing well, Provide the well permit number</inlineHelpText>
    <label>Permit # of Plugged &amp; Abandoned Well</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MUSW__Permit2__c.MUSW__Type__c</field>
            <operation>notEqual</operation>
            <value>Revision</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Permits (Permit# of Plugged &amp; Abandoned Well)</relationshipLabel>
    <relationshipName>Permits7</relationshipName>
    <type>Lookup</type>
</CustomField>