force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Permit_Purpose__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Purpose__c</fullName>
    <label>Permit Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Dark Green Zone</fullName>
                <isActive>false</isActive>
                <label>Dark Green Zone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>