force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Type__c</fullName>
    <label>Permit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_Withdrawal_Permit_Type</valueSetName>
    </valueSet>
</CustomField>