force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Permit_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Type_Code__c</fullName>
    <formula>LEFT(TEXT(AVO_Permit_Type__c), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Permit Type Code</label>
    <type>Text</type>
</CustomField>