force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_PermitNo__c.field-meta.xml
<CustomField>
    <fullName>AVO_PermitNo__c</fullName>
    <label>Permit Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>