force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_PermitNo_Sequence__c.field-meta.xml
<CustomField>
    <fullName>AVO_PermitNo_Sequence__c</fullName>
    <formula>IF( 
  ISBLANK( AVO_PermitNo__c ), 
  0, 
  VALUE( RIGHT( AVO_PermitNo__c , 4 )) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PermitNo Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>