force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Planned_Date_of_Pump_Installation__c.field-meta.xml
<CustomField>
    <fullName>AVO_Planned_Date_of_Pump_Installation__c</fullName>
    <label>Planned Date of Pump Installation</label>
    <type>Date</type>
</CustomField>