force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Planned_Date_of_Well_Install__c.field-meta.xml
<CustomField>
    <fullName>AVO_Planned_Date_of_Well_Install__c</fullName>
    <label>Planned Date of Well Installation</label>
    <type>Date</type>
</CustomField>