force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Pond_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pond_Name__c</fullName>
    <label>Pond Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>