force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Post_2006_Permit_Format__c.field-meta.xml
<CustomField>
    <fullName>AVO_Post_2006_Permit_Format__c</fullName>
    <label>Post 2006 Permit Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>