force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Previously_Irrigated_Permitted_Acres__c.field-meta.xml
<CustomField>
    <fullName>AVO_Previously_Irrigated_Permitted_Acres__c</fullName>
    <label>Previously Irrigated Permitted Acres</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>