force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Printed_Name_of_Driller__c.field-meta.xml
<CustomField>
    <fullName>AVO_Printed_Name_of_Driller__c</fullName>
    <label>Printed Name of Driller</label>
    <length>23</length>
    <type>Text</type>
</CustomField>