force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Priority__c.field-meta.xml
<CustomField>
    <fullName>AVO_Priority__c</fullName>
    <label>Priority</label>
    <length>16</length>
    <type>Text</type>
</CustomField>