force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>AVO_Property_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Property Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Permits (Property Owner)</relationshipLabel>
    <relationshipName>Permits1</relationshipName>
    <type>Lookup</type>
</CustomField>