force-app/main/default/objects/MUSW__Permit2__c/fields/Avo_Proposed_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Avo_Proposed_Occupancy__c</fullName>
    <label>Proposed Occupancy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Occupancy_Classification</valueSetName>
    </valueSet>
</CustomField>