force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Provide_Other_Agricultural_Use__c.field-meta.xml
<CustomField>
    <fullName>AVO_Provide_Other_Agricultural_Use__c</fullName>
    <description>If Selected Other Agricultural Use (Please provide the other Use details)</description>
    <inlineHelpText>If Selected Other Agricultural Use (Please provide the other Use details)</inlineHelpText>
    <label>Provide Other Agricultural Use</label>
    <type>TextArea</type>
</CustomField>