force-app/main/default/objects/MUSW__Permit2__c/fields/AVO_Provide_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>AVO_Provide_Permit_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If Selected Add,or Replace, Then Please Provide the Permit Number</description>
    <inlineHelpText>If Selected Add,or Replace, Then Please Provide the Permit Number</inlineHelpText>
    <label>Provide Permit Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MUSW__Permit2__c.MUSW__Type__c</field>
            <operation>notEqual</operation>
            <value>Revision</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Permits (Provide Permit Number)</relationshipLabel>
    <relationshipName>Permits2</relationshipName>
    <type>Lookup</type>
</CustomField>