force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Pump_Capacity_GPM__c.field-meta.xml
<CustomField>
    <fullName>avo_Pump_Capacity_GPM__c</fullName>
    <label>Pump Capacity (GPM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>