force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Pump_Diameter__c.field-meta.xml
<CustomField>
    <fullName>avo_Pump_Diameter__c</fullName>
    <inlineHelpText>(in.)</inlineHelpText>
    <label>Pump Diameter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>