force-app/main/default/objects/MUSW__Permit2__c/fields/avo_Pump_Disinfected__c.field-meta.xml
<CustomField>
    <fullName>avo_Pump_Disinfected__c</fullName>
    <label>Pump Disinfected?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>